--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,12 @@ target_link_libraries(
     hardware_i2c
     FreeRTOS-Kernel 
     FreeRTOS-Kernel-Heap4
+    hardware_pio
+)
+
+pico_generate_pio_header(
+    ${PROJECT_NAME} 
+    ${CMAKE_CURRENT_LIST_DIR}/src/pio_matrix.pio
 )
 
 # Add the standard include files to the build
